hphp/hack/test/typecheck/memoize_obj_policied.php.rust_elab.exp
File "memoize_obj_policied.php", line 45, characters 3-11:
This function can only be memoized using __Memoize(#KeyedByIC) or __MemoizeLSB(#KeyedByIC) because it has zoned context (Parsing[1002])
File "memoize_obj_policied.php", line 48, characters 13-22:
Enum class label/member mismatch (Typing[4110])
  File "memoize_obj_policied.php", line 48, characters 13-22:
  Unexpected enum class label: `#KeyedByIC`
File "memoize_obj_policied.php", line 19, characters 17-24:
Memoizing object parameters requires the capability AccessGlobals, which is not provided by the context. (Typing[4447])
  File "memoize_obj_policied.php", line 19, characters 29-30:
  The local (enclosing) context provides the capability set {}
File "memoize_obj_policied.php", line 28, characters 34-44:
Memoizing object parameters requires the capability AccessGlobals, which is not provided by the context. (Typing[4447])
  File "memoize_obj_policied.php", line 28, characters 49-50:
  The local (enclosing) context provides the capability set {}
File "memoize_obj_policied.php", line 31, characters 23-27:
Memoizing object parameters requires the capability AccessGlobals, which is not provided by the context. (Typing[4447])
  File "memoize_obj_policied.php", line 31, characters 32-33:
  The local (enclosing) context provides the capability set {}
File "memoize_obj_policied.php", line 34, characters 24-34:
Memoizing object parameters requires the capability AccessGlobals, which is not provided by the context. (Typing[4447])
  File "memoize_obj_policied.php", line 34, characters 39-40:
  The local (enclosing) context provides the capability set {}
File "memoize_obj_policied.php", line 37, characters 18-25:
Memoizing object parameters requires the capability AccessGlobals, which is not provided by the context. (Typing[4447])
  File "memoize_obj_policied.php", line 37, characters 31-41:
  The local (enclosing) context provides the capability WriteProperty
